[metadata]
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find:

[flake8]
exclude = .git,.tox,*/migrations/*, venv
ignore = E501, W293, E203, W605

[isort]
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
include_trailing_comma = true
line_length = 119
multi_line_output = 3
skip = migrations, venv
default_section = THIRDPARTY
known_first_party = drf_tester
known_django = django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
